Pedidos + sql
Associação de queries sql para todos os pedidos
