# m2g24-nodejs-server/api/openapi.yaml
@@ -174,7 +174,7 @@ paths:
       tags:
       - Disciplina
       summary: Retrieve disciplina alunos
-      operationId: retrieveCursoAlunos
+      operationId: retrieveDisciplinaAlunos
       parameters:
       - name: id
         in: path
@@ -187,10 +187,10 @@ paths:
           format: int64
         examples:
           one:
-            summary: Retrive Curso id 1
+            summary: Retrive Disciplina id 1
             value: 1
           two:
-            summary: Retrive Curso id 2
+            summary: Retrive Disciplina id 2
             value: 2
       responses:
         "200":
@@ -377,17 +377,17 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Curso'
+              $ref: '#/components/schemas/CursoDisciplina'
           application/xml:
             schema:
-              $ref: '#/components/schemas/Curso'
+              $ref: '#/components/schemas/CursoDisciplina'
       responses:
         "200":
           description: Create a Disciplina model instances
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Curso'
+                $ref: '#/components/schemas/CursoDisciplina'
         "400":
           description: Bad request
         "404":
@@ -718,11 +718,37 @@ components:
           format: int64
       additionalProperties: false
       example:
-        ano: 2000
+        ano: 1
         curso_id: 0
         nome: nome
         professor_id: 0
-        id: 0
+    CursoDisciplina:
+      title: CursoDisciplina
+      required:
+      - ano
+      - nome
+      - professor_id
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        ano:
+          type: integer
+          format: int64
+        curso_id:
+          type: integer
+          format: int64
+        nome:
+          type: string
+        professor_id:
+          type: integer
+          format: int64
+      additionalProperties: false
+      example:
+        ano: 1
+        nome: nome
+        professor_id: 0
     Curso:
       title: Curso
       required:
