# m2g24-nodejs-server/service/CursoService.js
@@ -1,5 +1,5 @@
 'use strict';
-
+var sql = require('../utils/db.js');
 
 /**
  * Create Curso
@@ -9,7 +9,17 @@
  **/
 exports.createCurso = function(body) {
   return new Promise(function(resolve, reject) {
-    resolve()
+    console.log(body);
+    sql.query("INSERT INTO curso (nome, nr_anos) values (?, ?)", [body.nome, body.nr_anos], function(err, res){
+      if (err){
+        console.log(err);
+        reject(err);
+      }
+      else{
+        console.log(res.insertID);
+        resolve (res.insertID);
+      }
+    });
   });
 }
 
@@ -24,7 +34,16 @@ exports.createCurso = function(body) {
 exports.createdisciplina_by_curso = function(body,id) {
   return new Promise(function(resolve, reject) {
     console.log(body);
-    resolve();
+    sql.query("INSERT INTO disciplina (ano, curso_id, nome, professor_id) values (?, ?, ?, ?)", [body.ano, id, body.nome, body.professor_id], function(err, res){
+      if (err){
+        console.log(err);
+        reject(err);
+      }
+      else{
+        console.log(res.insertID);
+        resolve (res.insertID);
+      }
+    });
   });
 }
 
@@ -37,7 +56,17 @@ exports.createdisciplina_by_curso = function(body,id) {
  **/
 exports.deleteCurso = function(id) {
   return new Promise(function(resolve, reject) {
-    resolve();
+    sql.query("DELETE FROM curso where id = ?", [id], function(err, res) {
+      if (err || !res.affectedRows){
+        console.log(err);
+        console.log(res);
+        reject();
+      }
+      else{
+        console.log(res);
+        resolve({"deleted":id});
+      }
+    });
   });
 }
 
@@ -50,7 +79,16 @@ exports.deleteCurso = function(id) {
  **/
 exports.retrieveCurso = function(id) {
   return new Promise(function(resolve, reject) {
-    resolve();
+    sql.query("SELECT * FROM curso WHERE id = ?", [id], function(err, res){
+      if (err){
+        console.log(err);
+        reject(err);
+      }
+      else{
+        console.log(res);
+        resolve(res[0]);
+      }
+    });
   });
 }
 
@@ -62,7 +100,16 @@ exports.retrieveCurso = function(id) {
  **/
 exports.retrieveCursos = function() {
   return new Promise(function(resolve, reject) {
-    resolve()
+    sql.query("SELECT * FROM curso", function(err, res){
+      if (err){
+        console.log(err);
+        reject(err);
+      }
+      else{
+        console.log(res);
+        resolve(res);
+      }
+    });
   });
 }
 
@@ -76,7 +123,17 @@ exports.retrieveCursos = function() {
  **/
 exports.updateCurso = function(body,id) {
   return new Promise(function(resolve, reject) {
-    resolve();
+    console.log(body);
+    sql.query("UPDATE curso set nome = ?, nr_anos = ? where id = ?", [body.nome, body.nr_anos, id], function(err, res){
+      if (err){
+        console.log(err);
+        reject(err);
+      }
+      else{
+        console.log(res);
+        resolve(id);
+      }
+    });
   });
 }
 
